<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_blue_dark"
        tools:context=".ContactDetail">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/listaDetalles" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/border_radius"
                />
            <TextView
                android:id="@+id/ViewName"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:textColor="@color/colorTitulo"
                android:background="@drawable/border_radius"
                tools:text="nombre" />
            <TextView
                android:id="@+id/ViewNumber"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:textColor="@color/colorTitulo"
                android:background="@drawable/border_radius"
                tools:text="Numero telefonico" />
            <TextView
                android:id="@+id/ViewEmail"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:textColor="@color/colorTitulo"
                android:background="@drawable/border_radius"
                tools:text="Correo electronico" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/btnCall"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btnCall"
                    android:background="@drawable/border_radius_btn"
                    tools:text="llamar" />
                <Button
                    android:id="@+id/btnEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btnEmail"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_radius_btn"
                    tools:text="Enviar correo" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>
